Update: progress animation

--- a/index.html
+++ b/index.html
@@ -94,81 +94,83 @@
             <div class="univskill col-6 mb-3">
                 <h3>HTML</h3>
                 <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0"
+                <div class="progress-bar bg-success" role="progressbar" data-width="80%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                 aria-valuemax="100">80%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>CSS</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-success" role="progressbar" data-width="70%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">70%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>JAVA SCRIPT</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-success" role="progressbar" data-width="70%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">70%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>PHP</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-success" role="progressbar" data-width="75%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">75%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>C</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-warning" role="progressbar" data-width="60%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">60%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>JAVA</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-warning" role="progressbar" data-width="60%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">60%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3">
                 <h3>WEB EXPLOITATION</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-danger" role="progressbar" data-width="50%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">50%</div>
                 </div>
             </div>
             <div class="univskill col-6 mb-3s">
                 <h3>NETWORK EXPLOITATION</h3>
                 <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar bg-danger" role="progressbar" data-width="40%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">40%</div>
                 </div>
             </div>
         </div>
         <h5 class="sub-tit">LANGUAGES</h5>
+        <div class="langs">
             <div class="lang mb-3">
                 <h3>Arabic : <span class="lang-desc">Native</span></h3>
                 <div class="progress">
-                    <div class="progress-bar " role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar " role="progressbar" data-width="100%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">100%</div>
                 </div>
             </div>
             <div class="lang  mb-3">
                 <h3>English : <span class="lang-desc">Professional Working Proficiency</span></h3>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" data-width="80%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">80%</div>
                 </div>
             </div>
             <div class="lang mb-3">
                 <h3>French : <span class="lang-desc">Limited Working Proficiency</span></h3>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" data-width="50%" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
                         aria-valuemax="100">50%</div>
                 </div>
+            </div>
             </div>
     </div>
 </section>
